2010-10-12  Sam Steingold  <sds@gnu.org>

	* modules/editor: resurrect editor.lisp from 1998; update and fix
	the most glaring problems; maintainer is wanted!

2010-10-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (GLLIB_MODULE_HEADERS): some headers, e.g.,
	sockets.h, are only needed by modules/*/gllib, not boot

2010-10-12  Sam Steingold  <sds@gnu.org>

	* modules/regexp/gllib/stddef.in.h, modules/regexp/gllib/stdlib.in.h:
	* modules/regexp/gllib/unistd.in.h, modules/regexp/glm4/stdlib_h.m4:
	* modules/syscalls/gllib/stddef.in.h, modules/syscalls/gllib/strerror.c:
	* modules/syscalls/gllib/strings.in.h:
	* modules/syscalls/gllib/sys_socket.in.h:
	* modules/syscalls/gllib/sys_utsname.in.h:
	* modules/syscalls/gllib/time.in.h:
	* modules/syscalls/gllib/unistd.in.h, modules/wildcard/glm4/fnmatch.m4:
	* gllib/errno.in.h, gllib/langinfo.in.h, gllib/malloca.c:
	* gllib/stddef.in.h, gllib/stdint.in.h, gllib/stdlib.in.h:
	* gllib/string.in.h, gllib/sys_socket.in.h, gllib/sys_time.in.h:
	* gllib/sys_wait.in.h, gllib/unistd.in.h, gllib/wchar.in.h:
	* gllib/wctype.in.h, glm4/errno_h.m4, glm4/include_next.m4:
	* glm4/stdlib_h.m4, glm4/threadlib.m4: update from gnulib to fix
	error: redefinition of `struct random_data'
	<http://article.gmane.org/gmane.comp.lib.gnulib.bugs/23606>

2010-10-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (module_configure_flags): fix according to
	<http://article.gmane.org/gmane.comp.sysutils.autoconf.general/13381>

2010-10-12  Sam Steingold  <sds@gnu.org>

	* gmalloc.c: move from src/malloc/ to src/
	* malloc/getpagesize.c: remove obsolete file
	* makemake.in: update

2010-10-11  Sam Steingold  <sds@gnu.org>

	* makemake.in: make charstrg.o depend on $(GLLIB_A) instead of
	gllib because the latter is _always_ rebuilt

2010-10-08  Sam Steingold  <sds@gnu.org>

	* genclisph.d (check_typecodes): run in the generated
	clisp-test-lispbibl instead of genclisph so that the check is
	always enabled

2010-10-05  Sam Steingold  <sds@gnu.org>
